test/data/semantic/bad/if_blocks_type_mismatch.coy
fn main() -> () {
    let x = true;

    if x {
        1
    } else {
        0.0
    };

    ()
}
